--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -589,28 +589,26 @@
   + .p-inputgroup {
     margin-top: 5px;
   }
-  :first-child.p-inputtext{
-    border-left:unset;
+
+  > .p-inputswitch, > .editor {
+    margin-left: 5px;
+    align-self: center;
   }
 
   .p-inputgroup-addon {
     border-right: 1px solid var(--border-color);
-     flex: 0 0 auto;
-
-    //+ .p-inputnumber .p-inputtext, + .p-calendar .p-inputtext{
-    //
-    //}
   }
-  > *{
-    border-left:unset;
-    align-self:center;
+
+  > .p-inputtext, > .p-dropdown,> .p-inputnumber .p-inputtext {
+    border-left: unset;
   }
 }
+
 .tinyBtn {
   @extend .p-0;
-  margin:2px;
+  margin: 2px;
   width: 20px;
-  height:20px;
+  height: 20px;
 }
 
 html {
